Add demo content management script with seed and teardown functionality

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "astro": "astro",
     "create-episode": "node scripts/create-episode.js",
     "create-guest": "node scripts/create-guest.js",
-    "init-podcast": "node scripts/init-podcast.js"
+    "init-podcast": "node scripts/init-podcast.js",
+    "demo-content": "node scripts/demo-content.js"
   },
   "dependencies": {
     "@astrojs/rss": "^4.0.12",
