--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro",
     "create-episode": "node scripts/create-episode.js",
     "create-guest": "node scripts/create-guest.js",
+    "create-host": "node scripts/create-host.js",
     "init-podcast": "node scripts/init-podcast.js",
     "demo-content": "node scripts/demo-content.js"
   },
